[package]
name = "graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#mathsolver = {git = "https://github.com/romptroll/math/", branch = "lib"}
mathsolver = {path = "../math"}
image = "*"
#rayon = "1.5.0"
clap = { version = "3.0" }

[dependencies.plotters]
git = "https://github.com/plotters-rs/plotters"
features = ["ttf"]

[dependencies.plotters-bitmap]
default_features = false
git = "https://github.com/plotters-rs/plotters"